# vbd-copilot

./: .coverage  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  router.py  server.py  server_adapter.py  store.py  tools.py  ui.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: copilot-cli-plugins.instructions.md
.github/plugin/: .mcp.json  plugin.json  run-csa-tools-server.sh
agent_defs/ai-project/: ai-brainstorming.agent.md  ai-brainstorming.md  ai-demo-conductor.agent.md  ai-demo-conductor.md  ai-implementor.agent.md  ai-implementor.md  ai-solution-architect.agent.md  ai-solution-architect.md  architecture-builder-subagent.agent.md  architecture-builder-subagent.md  architecture-reviewer-subagent.agent.md  architecture-reviewer-subagent.md  code-builder-subagent.agent.md  code-builder-subagent.md  code-reviewer-subagent.agent.md  code-reviewer-subagent.md  demo-env-builder-subagent.agent.md  demo-env-builder-subagent.md  demo-scenario-builder-subagent.agent.md  demo-scenario-builder-subagent.md  docs-reviewer-subagent.agent.md  docs-reviewer-subagent.md  infra-reviewer-subagent.agent.md  infra-reviewer-subagent.md  pipeline-reviewer-subagent.agent.md  pipeline-reviewer-subagent.md
agents/: __init__.py  loader.py  models.py  registry.py
docs/: INSTALLATION.md  QUALITY.md  RESPONSIBLE-AI.md  USAGE.md
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/: Dockerfile  pyproject.toml  requirements.txt
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/app/: __init__.py  config.py  main.py
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/app/models/: __init__.py  schemas.py
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/app/prompts/: __init__.py  system_prompt.py
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/app/routers/: __init__.py  chat.py  health.py  sessions.py
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/app/services/: __init__.py  billing_api.py  conversation_manager.py  feedback_service.py  model_router.py  openai_service.py  rag_pipeline.py  search_service.py
samples/ai-projects/CUSTOMER_NAME-cx-retention/src/frontend/: chat.js  index.html  styles.css
samples/hackathons/github-copilot-banking-dev/resources/starter/: README.md  pyproject.toml  requirements.txt
samples/hackathons/github-copilot-banking-dev/resources/starter/app/: config.py  database.py  exceptions.py  main.py
samples/hackathons/github-copilot-banking-dev/resources/starter/app/api/: dependencies.py
samples/hackathons/github-copilot-banking-dev/resources/starter/app/api/routers/: accounts.py  auth.py  transactions.py  transfers.py
samples/hackathons/github-copilot-banking-dev/resources/starter/app/models/: account.py  transaction.py  transfer.py
samples/hackathons/github-copilot-banking-dev/resources/starter/app/services/: account_service.py  interest_service.py  transaction_service.py
samples/hackathons/github-copilot-banking-dev/resources/starter/app/utils/: logging.py
samples/hackathons/github-copilot-banking-dev/resources/starter/synthetic_data/: transactions.csv
samples/hackathons/github-copilot-banking-dev/resources/starter/tests/: conftest.py
samples/hackathons/github-copilot-banking-dev/resources/starter/tests/integration/: test_api.py
samples/hackathons/github-copilot-banking-dev/resources/starter/tests/unit/: test_account_service.py  test_interest_service.py
tests/: test_app.py  test_collector.py  test_commands.py  test_hackathon_qa.py  test_loader.py  test_models.py  test_pricing.py  test_queries.py  test_registry.py  test_router.py  test_store.py  test_tools.py
(+115 files in other folders)
